<resources>
    <string name="app_name">FormularioFI</string>


    <!-- Textos del splash -->
    <string name="formname">Formulario FI</string> <!-- Texto del splash -->
    <string name="appversion">Versión 1.0</string> <!-- Texto de la version -->


    <!-- Textos del formulario -->
    <string name="dateText">Fecha de nacimiento</string>
    <string name="namePH">Nombre(s)</string>
    <string name="lastNamePH">Apellidos</string>
    <string name="numCuentaPH">No. Cuenta</string>
    <string name="enviarText">Enviar</string>
    <!-- Textos de las carreras -->

    <string name="selecciona">Selecciona tu carrera</string>
    <string name="aeroespacial">Ingeniería aeroespacial</string>
    <string name="ambiental">Ingeniería ambiental</string>
    <string name="civil">Ingeniería Civil</string>
    <string name="computacion">Ingeniería en Computación</string>
    <string name="electrica">Ingeniería Eléctrica Electrónica</string>
    <string name="geofrisica">Ingeniería Geofísica</string>
    <string name="geologica">Ingeniería Geológica</string>
    <string name="geomatica">Ingeniería Geomática</string>
    <string name="industrial">Ingeniería Industrial</string>
    <string name="mecanica">Ingeniería Mecánica</string>
    <string name="mecatronica">Ingeniería Mecatrónica</string>
    <string name="minas">Ingeniería de Minas y Metalurgia</string>
    <string name="petrolera">Ingeniería Petrolera</string>
    <string name="biomedica">ingeniería en Sistemas Biomédicos</string>
    <string name="telecom">Ingeniería en Telecomunicaciones</string>

    <string-array name="carrerasNames">
        <item>@string/selecciona</item>
        <item>@string/aeroespacial</item>
        <item>@string/ambiental</item>
        <item>@string/civil</item>
        <item>@string/computacion</item>
        <item>@string/electrica</item>
        <item>@string/geofrisica</item>
        <item>@string/geologica</item>
        <item>@string/geomatica</item>
        <item>@string/industrial</item>
        <item>@string/mecanica</item>
        <item>@string/mecatronica</item>
        <item>@string/minas</item>
        <item>@string/petrolera</item>
        <item>@string/biomedica</item>
        <item>@string/telecom</item>
    </string-array>

    <!-- Textos FormAccept -->
    <string name="anios">\ años</string>

    <!-- Textos de error -->
    <string name="nombreError">Ingrese su nombre</string>
    <string name="apellidoError">Ingrese su apellido</string>
    <string name="numCuentaError">Ingrese un número de 9 dígitos</string>
    <string name="carreraError">Seleccione una carrera</string>
    <string name="fechaError">ingrese una fecha válida</string>
</resources>